#11938 Fixing sonar violations